@@ -221,13 +221,30 @@
                             <execution>
                                 <id>default-compile</id>
                                 <configuration>
-                                    <compilerArgs>
-                                        <arg>--add-modules</arg>
-                                        <arg>java.xml.bind</arg>
-                                        <arg>--upgrade-module-path</arg>
-                                        <arg>${endorsed.dir}</arg>
-                                    </compilerArgs>
-                                    <verbose>true</verbose>
+                                    <jdkToolchain>
+                                        <version>9</version>
+                                    </jdkToolchain>
+                                    <source>9</source>
+                                    <target>9</target>
+                                    <includes>
+                                        <include>module-info.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>base-compile</id>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <source>1.7</source>
+                                    <target>1.7</target>
+                                    <jdkToolchain>
+                                        <version>1.7</version>
+                                    </jdkToolchain>
+                                    <excludes>
+                                        <exclude>module-info.java</exclude>
+                                    </excludes>
                                 </configuration>
                             </execution>
                         </executions>
@@ -239,8 +256,6 @@
                             <forkCount>1</forkCount>
                             <reuseForks>true</reuseForks>
                             <argLine>
-                                --add-reads java.base=java.desktop
-                                --add-modules java.xml.bind
                                 --upgrade-module-path ${endorsed.dir}
                                 -Djdk.attach.allowAttachSelf
                            </argLine>
